custome/src/App.css
:root {
  --main-bg-color: rgb(55, 136, 129);
  --secondary-bg-color: #f5f5f5;
  --white: #fff;
  --highlight: rgb(182, 9, 81);
  --secondary-highlight: rgb(219, 9, 97);
}

a {
  color: var(--highlight);
  cursor: pointer;
}

a:hover {
  color: var(--secondary-highlight);
}

.Filter {
  cursor: default;
}

.Logo,
.Card,
.registerButton,
.loginButton,
.profileIcon,
.Category,
.checkbox {
  cursor: pointer;
}

.App {
  display: flex;
  flex-direction: column;
}

.Header {
  background: var(--main-bg-color);
  color: #fff;
  font-size: 1.2em;
  padding: 12px 0px;
  text-align: center;
  display: flex;
  flex-direction: row;
  position: sticky;
  top: 0px;
  z-index: 3;
}

.Logo {
  margin-right: auto;
  margin-left: 20px;
}

.searchBar {
  background: var(--secondary-bg-color);
  padding: 7px 16px;
  min-width: 30%;
  border-radius: 40px;
  margin-left: auto;
  margin-right: 30px;
}

.accountButtons {
  display: flex;
  flex-direction: row;
}

.profileIcon {
  height: 32px;
  border-radius: 40px;
  margin-right: 15px;
}

.registerButton,
.loginButton {
  padding: 4px 15px 0px;
  font-size: 16px;
}

.registerButton {
  background-color: var(--white);
  border-radius: 5px;
  color: var(--main-bg-color);
}

.HomePage {
  display: flex;
  flex-direction: row;
}

.filterBox {
  position: relative;
  padding: 34px 50px 0px;
}

.filterLabel, .categoryLabel{
  font-size: 20px;
}

.Filter,
.Category {
  padding: 7px 17px;
}

.Filter:first-of-type, .Category:first-of-type{
  margin-top: 5px;
}

.checkbox {
  margin-left: 5px;
}

.FilterGroup,
.CategoryGroup {
  padding-bottom: 40px;
}

.cardBox {
  display: flex;
  flex: 1;
  min-height: 1000px;
  flex-wrap: wrap;
  background: #ddd;
  justify-content: center;
  padding-bottom: 40px;
}

.Card {
  height: 200px;
  min-width: 200px;
  padding: 30px 14px;
}

.cardImg {
  border-radius: 10px;
}

.cardAuthorName {
  color: #464646;
  padding-bottom: 2px;
  font-size: 14px;
}

.cardEffectName {
  font-size: 22px;
}

.cardText {
  display: flex;
  align-items: center;
}


.cardRatingTotal,
.cardDownloadText {
  color: #464646;
}

.cardDotImg {
  /*top right bottom left*/
  /*top right/left bottom*/
  padding: 4px 6px 0px;
}

